--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@tailwindcss/vite": "^4.1.10",
     "@tanstack/react-query": "^5.80.7",
     "axios": "^1.10.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.515.0",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-router": "^7.6.2",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.10",
     "zustand": "^5.0.5"
   },
@@ -43,6 +46,7 @@
     "msw": "^2.12.4",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
+    "tw-animate-css": "^1.4.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5",
