--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
@@ -28,6 +29,7 @@
     "react-dom": "^19.2.1",
     "react-router": "^7.6.2",
     "sonner": "^2.0.7",
+    "react-textarea-autosize": "^8.5.9",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.10",
     "zustand": "^5.0.5"
