--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-router": "^7.6.2",
+    "react-router-dom": "^7.10.1",
     "sonner": "^2.0.7",
     "react-textarea-autosize": "^8.5.9",
     "tailwind-merge": "^3.4.0",
