--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "lucide-react": "^0.515.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-markdown": "^10.1.0",
     "react-router": "^7.6.2",
+    "react-router-dom": "^7.10.1",
+    "remark-gfm": "^4.0.1",
     "tailwindcss": "^4.1.10",
     "zustand": "^5.0.5"
   },
