--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
+    "react-intersection-observer": "^10.0.0",
     "react-router": "^7.6.2",
     "react-router-dom": "^7.10.1",
     "react-textarea-autosize": "^8.5.9",
